--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="card mx-auto border-ligh">
             <img src="./assets/img/Steve.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Steve Carell</h5>
+              <h5 class="card-title">Steve</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam harum asperiores
                 explicabo officia commodi? Magnam, nihil. Est facere corporis molestiae asperiores nemo, laborum
                 voluptatum natus deleniti a id modi quos sapiente! Optio explicabo provident dolor nesciunt, ab
@@ -76,7 +76,7 @@
           <div class="card mx-auto border-ligh">
             <img src="./assets/img/Bill.jpg" class="card-img-top img-thumbnail" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Bill Murray</h5>
+              <h5 class="card-title">Bill</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quibusdam numquam
                 animi expedita labore, assumenda excepturi laboriosam fugiat unde amet, voluptates accusantium
                 perferendis recusandae quidem corporis mollitia facere asperiores velit voluptatem culpa fuga et, ipsa
@@ -87,9 +87,9 @@
         </div>
         <div class="col">
           <div class="card mx-auto border-ligh">
-            <img src="./assets/img/Adam.jpeg" class="card-img-top" alt="...">
+            <img src="./assets/img/ada.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Adam Sandler</h5>
+              <h5 class="card-title">Ada</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, id unde dolor
                 deserunt voluptatibus ipsum. Magni, aspernatur autem itaque possimus totam delectus veritatis suscipit?
                 Rerum, nesciunt ipsa ipsam consectetur alias fugit excepturi non debitis, sapiente quaerat error dicta
